WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
198992
[Nicosia] Invalidate SceneIntegration in LayerTreeHost::invalidate()
https://bugs.webkit.org/show_bug.cgi?id=198992
Summary
[Nicosia] Invalidate SceneIntegration in LayerTreeHost::invalidate()
Zan Dobersek
Reported
2019-06-18 23:46:26 PDT
[Nicosia] Invalidate SceneIntegration in LayerTreeHost::invalidate()
Attachments
Patch
(1.58 KB, patch)
2019-06-18 23:48 PDT
,
Zan Dobersek
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zan Dobersek
Comment 1
2019-06-18 23:48:28 PDT
Created
attachment 372439
[details]
Patch
Zan Dobersek
Comment 2
2019-06-19 05:02:11 PDT
Comment on
attachment 372439
[details]
Patch Clearing flags on attachment: 372439 Committed
r246585
: <
https://trac.webkit.org/changeset/246585
>
Zan Dobersek
Comment 3
2019-06-19 05:02:15 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2019-06-19 05:03:20 PDT
<
rdar://problem/51891467
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug