[Nicosia] Invalidate SceneIntegration in LayerTreeHost::invalidate() https://bugs.webkit.org/show_bug.cgi?id=198992

Reviewed by Carlos Garcia Campos.

* WebProcess/WebPage/CoordinatedGraphics/LayerTreeHost.cpp:
(WebKit::LayerTreeHost::invalidate): Invalidate the
Nicosia::SceneIntegration object. This should properly disassociate
the now-invalited LayerTreeHost (a SceneIntegration client) from the
SceneIntegration object that can still be shared with platform layers
originating from this LayerTreeHost.


Canonical link: https://commits.webkit.org/212977@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246585 268f45cc-cd09-0410-ab3c-d52691b4dbfc